[package]
name = "pkmallocator"
version = "0.1.0"
authors = ["Paul Kirth <pk1574@gmail.com>"]

[dependencies]
mpk = { git = "https://github.com/securesystemslab/pkru-safe-mpk-libc.git" }
pkalloc = { git = "https://github.com/securesystemslab/pkru-safe-pkalloc.git" }
libc = { version = "0.2", default-features = false }
errno = "0.2.3"
